tests/fixtures/invalid/bytes_add_none.py
# Cannot add Bytes and None
x: bytes = b"hello" + None
